--- a/libs/user/feature/src/lib/containers/device/device.container.html
+++ b/libs/user/feature/src/lib/containers/device/device.container.html
@@ -1,7 +1,39 @@
-<p>device works!</p>
+<contact-toolbar>
+  <a
+    mat-icon-button
+    class="toolbar-icon"
+    matTooltip="Conta de usuário"
+    routerLink="/user"
+  >
+    <mat-icon>account_circle</mat-icon>
+  </a>
 
-<pre>{{ facade.loading$ | async }}</pre>
-<pre>{{ facade.user$ | async | json }}</pre>
+  <contact-toolbar-dropdown
+    [user]="auth.user$"
+    (menuClicked)="onMenuClicked($event)"
+  ></contact-toolbar-dropdown>
+
+  <button
+    mat-icon-button
+    class="toolbar-icon favorite-icon"
+    aria-label="Example icon-button with heart icon"
+  >
+    <mat-icon>favorite</mat-icon>
+  </button>
+
+  <button
+    mat-icon-button
+    mediaQuery
+    min="lg"
+    class="toolbar-icon"
+    aria-label="Example icon-button with share icon"
+  >
+    <mat-icon>share</mat-icon>
+  </button>
+</contact-toolbar>
+
+<pre>{{ user.loading$ | async }}</pre>
+<pre>{{ user.user$ | async | json }}</pre>
 
 <mat-icon class="icon-blue">account_circle</mat-icon>
 <mat-icon class="icon-blue">content_copy</mat-icon>
