--- a/libs/client/feature-meet/src/lib/containers/audio/audio.container.html
+++ b/libs/client/feature-meet/src/lib/containers/audio/audio.container.html
@@ -1,7 +1,7 @@
 <div></div>
 <mat-card class="card">
   <mat-card-header>
-    <mat-card-subtitle>Microfones</mat-card-subtitle>
+    <mat-card-subtitle>MICROFONES</mat-card-subtitle>
   </mat-card-header>
 
   <meet-device-list
