--- a/libs/client/feature-meet/src/lib/containers/video/video.container.html
+++ b/libs/client/feature-meet/src/lib/containers/video/video.container.html
@@ -1,7 +1,7 @@
 <div></div>
 <mat-card class="card">
   <mat-card-header>
-    <mat-card-subtitle>Câmeras</mat-card-subtitle>
+    <mat-card-subtitle>CÂMERAS</mat-card-subtitle>
   </mat-card-header>
 
   <meet-device-list
